# BitFun

./: .gitignore  ACP_IMPLEMENTATION_SUMMARY.md  ACP_QUICK_START.md  AGENTS-CN.md  AGENTS.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  DEEP_REVIEW_USAGE_GUIDE.md  EycTableEditor.css  EycTableEditor.tsx  PHASE2_DYNAMIC_CONCURRENCY_PLAN.md  README.md  README.zh-CN.md  chinese_keywords.txt  git-workflow-guide.txt  package-lock.json  package.json  pnpm-lock.yaml  system.灵  test_flow_lines.txt  命令行.txt  更新记录.txt  空灵开发环境更新_v2.6.5.txt  空灵语言更新记录_2026-04-18.txt
.github/workflows/: ci.yml  desktop-package.yml  nightly.yml
BitFun-Installer/: AGENTS-CN.md  AGENTS.md  README.md  index.html  package-lock.json  package.json
BitFun-Installer/scripts/: build-installer.cjs  sync-theme-i18n.cjs
BitFun-Installer/src/: App.tsx
BitFun-Installer/src-tauri/: Cargo.toml  tauri.conf.json
BitFun-Installer/src-tauri/crates/installer-ai-stream/: Cargo.toml  lib.rs
BitFun-Installer/src-tauri/crates/installer-ai-stream/stream_handler/: openai.rs
BitFun-Installer/src-tauri/crates/installer-ai-stream/types/: gemini.rs  openai.rs  responses.rs  unified.rs
docs/: acp-design.md
docs/architecture/: core-decomposition.md  deep-review.md
my_demo/: imgui.ini  kl.cfg  logic.nim  main.nim  ui.nim
scripts/: check-core-boundaries.mjs  collect-tauri-updater-assets.mjs  desktop-tauri-build.mjs  dev.cjs  ensure-openssl-windows.mjs  generate-tauri-latest-json.mjs  generate-version.cjs  i18n-audit.mjs  patch-dmg-extras.sh  prepare-flashgrep-resource.mjs  test-acp.js  test-acp.sh  verify-tauri-latest-json.mjs
server/: .env.example  Dockerfile  docker-compose.yml  nginx.conf
src/apps/cli/: ACP_README.md  Cargo.toml  build.rs
src/apps/cli/prompts/: init.md
src/apps/cli/src/: chat_state.rs  commands.rs  config.rs  main.rs  prompts.rs  session.rs
src/apps/cli/src/acp/: handlers.rs  mod.rs  protocol.rs  session.rs
src/apps/cli/src/agent/: agentic_system.rs  core_adapter.rs  mod.rs
src/apps/cli/src/modes/: chat.rs  exec.rs  mod.rs
src/apps/cli/src/ui/: agent_selector.rs  chat.rs  command_menu.rs  command_palette.rs  diff_render.rs  markdown.rs  mcp_add_dialog.rs  mcp_selector.rs  mod.rs  model_config_form.rs  model_selector.rs  permission.rs  provider_selector.rs  question.rs  session_selector.rs  skill_selector.rs  startup.rs  string_utils.rs  subagent_selector.rs  syntax_highlight.rs  text_input.rs  theme.rs  theme_selector.rs  tool_cards.rs  widgets.rs
src/apps/cli/src/ui/chat/: input.rs  mouse.rs  popups.rs  render.rs  scroll.rs  state.rs  tools.rs
src/apps/desktop/: AGENTS-CN.md  AGENTS.md  Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src/apps/desktop/.tauri/: bitfun-updater.key.pub
src/apps/desktop/capabilities/: default.json
src/apps/desktop/dmg-extras/: If app is damaged read this.txt  如果提示已损坏请看这里.txt
src/apps/desktop/resources/: worker_host.js
src/apps/desktop/src/: lib.rs  logging.rs  macos_menubar.rs  main.rs  theme.rs  tray.rs
src/apps/desktop/src/api/: acp_client_api.rs  agentic_api.rs  announcement_api.rs  app_state.rs  browser_api.rs  browser_control_api.rs  btw_api.rs  commands.rs  computer_use_api.rs  config_api.rs  debug_api.rs  dto.rs  editor_ai_api.rs  git_api.rs  i18n_api.rs  image_analysis_api.rs  insights_api.rs  live_app_api.rs  mcp_api.rs  miniapp_api.rs  mod.rs  nim_api.rs  path_target.rs  remote_connect_api.rs  search_api.rs  self_control_api.rs  session_api.rs  session_storage_path.rs  skill_api.rs  snapshot_service.rs  ssh_api.rs  storage_commands.rs  subagent_api.rs  system_api.rs  terminal_api.rs  tool_api.rs  workspace_activation.rs
src/apps/desktop/src/computer_use/: desktop_host.rs  interactive_filter.rs  linux_ax_ui.rs  macos_ax_dump.rs  macos_ax_ui.rs  macos_ax_write.rs  macos_bg_input.rs  macos_list_apps.rs  mod.rs  screen_ocr.rs  som_overlay.rs  ui_locate_common.rs  windows_ax_ui.rs
src/apps/relay-server/: Cargo.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  remote-deploy.sh  stop.sh  test_incremental_upload.py
src/apps/relay-server/src/: main.rs
src/apps/relay-server/src/relay/: room.rs
src/apps/relay-server/src/routes/: api.rs  websocket.rs
src/apps/relay-server/static/: index.html
src/apps/relay-server/static/homepage/: index.html
src/crates/acp/: Cargo.toml
src/crates/acp/src/: lib.rs
src/crates/acp/src/client/: builtin_clients.rs  config.rs  manager.rs  mod.rs  remote_capability_store.rs  remote_session.rs  requirements.rs  session_options.rs  stream.rs  tool.rs  tool_card_bridge.rs
src/crates/acp/src/runtime/: events.rs  model.rs  prompt.rs  session.rs
src/crates/product-domains/: Cargo.toml
src/crates/product-domains/src/function_agents/: common.rs  mod.rs
src/crates/product-domains/src/miniapp/: mod.rs  types.rs
src/crates/product-domains/tests/: function_agent_contracts.rs  miniapp_contracts.rs
src/crates/services-core/: Cargo.toml
src/crates/services-core/src/: lib.rs  process_manager.rs
src/crates/services-core/src/session/: types.rs
src/crates/services-core/src/session_usage/: redaction.rs  render.rs  types.rs
src/crates/services-core/src/token_usage/: types.rs
src/crates/services-core/tests/: session_contracts.rs  token_usage_contracts.rs
src/crates/services-integrations/: Cargo.toml
src/crates/services-integrations/src/: lib.rs  remote_connect.rs
src/crates/services-integrations/src/git/: graph.rs  service.rs  utils.rs
src/crates/services-integrations/src/mcp/: auth.rs  mod.rs
src/crates/services-integrations/src/mcp/config/: mod.rs
src/crates/services-integrations/src/mcp/protocol/: client_info.rs  jsonrpc.rs  mod.rs  transport.rs  transport_remote.rs
src/crates/services-integrations/src/mcp/server/: connection.rs  mod.rs
src/crates/services-integrations/src/remote_ssh/: mod.rs  paths.rs  types.rs
src/crates/services-integrations/tests/: mcp_contracts.rs  remote_connect_contracts.rs  remote_ssh_contracts.rs
src/crates/tool-packs/: Cargo.toml
src/crates/tool-packs/src/: lib.rs
等级/: IDE编译等级.html  新建 文本文档 (4).txt  新建 文本文档 (5).txt  空灵语言开发者排名系统介绍.md
(+1856 files in other folders)
