[package]
name = "bitfun-desktop"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "BitFun Desktop Application (Tauri)"

[lib]
name = "bitfun_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bitfun-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }
serde_json = { workspace = true }

[dependencies]
# Internal crates
bitfun-core = { path = "../../crates/core", features = ["ssh-remote"] }
bitfun-transport = { path = "../../crates/transport", features = ["tauri-adapter"] }
bitfun-webdriver = { path = "../../crates/webdriver" }

# Tauri
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-notification = { workspace = true }

# Inherited from workspace
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
dark-light = { workspace = true }
similar = { workspace = true }
ignore = { workspace = true }
urlencoding = { workspace = true }
reqwest = { workspace = true }
thiserror = "1.0"
futures = { workspace = true }
async-trait = { workspace = true }
sha1 = { workspace = true }
screenshots = "0.8"
enigo = "0.2"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
resvg = { version = "0.47.0", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = { version = "0.23", features = ["elcapitan", "highsierra"] }
dispatch = "0.2"
objc2 = { version = "0.6", features = ["exception"] }
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
objc2-vision = { version = "0.3.2", features = ["VNRecognizeTextRequest", "VNRequest", "VNObservation", "VNRequestHandler", "VNUtils", "VNTypes", "objc2-core-foundation"] }

[target.'cfg(windows)'.dependencies]
win32job = { workspace = true }
windows = { version = "0.61.3", features = [
  "Foundation",
  "Globalization",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_Accessibility",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.61.2"

[features]
default = []
# Enable webview devtools and element inspector for development builds.
# Only active in debug builds or when explicitly requested via --features devtools.
# Never enabled in release profile intended for end users.
devtools = ["tauri/devtools"]

[target.'cfg(target_os = "linux")'.dependencies]
atspi = "0.29"
leptess = "0.14.0"
