[package]
name = "bitfun-services-integrations"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "BitFun integration service owner crate"

[lib]
name = "bitfun_services_integrations"
crate-type = ["rlib"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
bitfun-events = { path = "../events" }
aes-gcm = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
bitfun-services-core = { path = "../services-core", optional = true }
chrono = { workspace = true, optional = true }
git2 = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rmcp = { version = "0.12.0", default-features = false, features = [
    "auth",
    "base64",
    "client",
    "macros",
    "schemars",
    "server",
], optional = true }
sha2 = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }

[target.'cfg(not(windows))'.dependencies]
git2 = { workspace = true, features = ["vendored-openssl"], optional = true }

[features]
default = []
announcement = []
git = ["bitfun-services-core", "chrono", "git2", "thiserror"]
file-watch = ["notify"]
mcp = ["aes-gcm", "anyhow", "async-trait", "base64", "rand", "rmcp"]
remote-ssh = ["sha2", "tokio-util"]
product-full = ["announcement", "file-watch", "git", "mcp", "remote-ssh"]
