[package]
name = "installer-ai-stream"
version = "0.2.2"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
eventsource-stream = "0.2"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "sync", "time"] }
log = "0.4"
